Finih FirstActivity, And SecondActivity, Fix deprecated issue

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -24,6 +24,7 @@
         android:layout_height="47dp"
         android:layout_marginTop="62dp"
         android:background="@drawable/bg_input"
+        android:fontFamily="@font/poppins"
         android:hint="@string/enter_name"
         android:padding="8dp"
         android:textColor="@color/black"
@@ -37,6 +38,7 @@
         android:layout_height="47dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_input"
+        android:fontFamily="@font/poppins"
         android:hint="@string/enter_palindrome"
         android:padding="8dp"
         android:textColor="@color/black"
@@ -51,6 +53,7 @@
         android:layout_marginTop="43dp"
         android:background="@drawable/bg_btn"
         android:backgroundTint="@color/unique"
+        android:fontFamily="@font/poppins"
         android:text="@string/check_palindrome"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +67,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/bg_btn"
         android:backgroundTint="@color/unique"
+        android:fontFamily="@font/poppins"
         android:text="@string/next_activity"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
