--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -16,31 +16,17 @@
         tools:src="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tv_first_name"
+        android:id="@+id/tv_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins"
-        android:text="@string/first_name"
+        android:text="@string/item_name"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/iv_user"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="14dp"
-        android:fontFamily="@font/poppins"
-        android:text="@string/last_name"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/tv_first_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -53,5 +39,5 @@
         android:text="@string/email"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/iv_user"
-        app:layout_constraintTop_toBottomOf="@id/tv_first_name" />
+        app:layout_constraintTop_toBottomOf="@id/tv_item_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
